Refactor getUserByName route to use user's first name as parameter
