# routes/userRoutes.js
@@ -13,6 +13,6 @@ router.put('/:id', user.updateUser);
 
 router.get('/:id', user.getUser);
 
-router.get('/name', user.getUserByName);
+router.get('/:name', user.getUserByName);
 
 module.exports = router;
