# swagger-output.json
@@ -313,9 +313,17 @@
         }
       }
     },
-    "/users/name": {
+    "/users/{name}": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
